addons/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: data
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: pgadmin-port
      protocol: TCP
      port: 33000
      targetPort: 80
